--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-hello world
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Fabien Furet</title>
+		<meta name="description" content="Fabien Furet / Développeur">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Cardo:700" rel="stylesheet" type="text/css">
+		<style type="text/css">
+			.main {
+				font-family: 'PT Serif', serif;
+				background-color:;
+
+				margin-left: auto;
+			    margin-right: auto;
+			    max-width: 600px;
+			    padding-left:1em;
+			    padding-right:1em;
+			}
+			h1 {
+				font-family: 'Cardo', serif;
+				font-size: 2.5em;
+				color:#2196F3;
+				margin-bottom: 0px;
+			}
+			h2 {
+				font-family: 'Cardo', serif;
+				font-size: 1.4em;
+				margin-top: 0px;
+			}
+			a {
+				color:#f44336;
+			}
+
+			.links {
+				
+			}
+
+			.aka {
+				font-size: 0.3em !important;
+			}
+		</style>
+	</head>
+	<body>
+		<!--[if lt IE 7]>
+			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+		<![endif]-->
+		<div class="main">
+			<h1 itemscope="" itemtype="http://data-vocabulary.org/Person"><span itemprop="name">Fabien Furet</span> <span class="aka">aka RETFU</span></h1>
+			<h2>Développeur web</h2>
+			<p>
+				Cela fait plus de 10 ans que j'évolue dans le milieu du web, à la 
+				fois en backend et frontend.
+			</p>
+			<p>
+				Je suis plutôt spécialisé <a href="http://www.phptherightway.com">PHP</a> pour le backend, même s'il m'est arrivé d'utiliser python. Frontend classique: HTML5, CSS3, Javascript. Je croise régulièrement Saas, Compass, Cordova.
+			</p>
+			<p>
+				J'ai par le passé beaucoup travaillé en AS3 pour produire des jeux, des applications et des sites web "concept".
+			</p>
+			<p>
+				Je suis actuellement Directeur technique chez <a href="http://iwd.fr">IWD</a> où j'aide l'équipe dev à produire des livrables de qualités dans les temps.
+			</p>
+			<p class="links">
+				<a href="https://github.com/RETFU">Github</a> - <a href="https://twitter.com/RETFU">Twiter</a> - <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a>
+			</p>
+		</div>
+		<script>
+			// (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+			// function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+			// e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+			// e.src='//www.google-analytics.com/analytics.js';
+			// r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+			// ga('create','UA-XXXXX-X');ga('send','pageview');
+		</script>
+	</body>
+</html>
