--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
 			<h1 itemscope="" itemtype="http://data-vocabulary.org/Person"><span itemprop="name">Fabien Furet</span> <span class="aka">aka RETFU</span></h1>
 			<h2>Développeur web</h2>
 			<p>
-				Cela fait plus de 10 ans que j'évolue dans le milieu du web, à la 
-				fois en backend et frontend.
+				Cela fait plus de 10 ans que j'évolue dans le milieu du web, à la fois en backend et frontend.
 			</p>
 			<p>
-				Je suis plutôt spécialisé <a href="http://www.phptherightway.com">PHP</a> pour le backend, même s'il m'est arrivé d'utiliser python. Frontend classique: HTML5, CSS3, Javascript. Je croise régulièrement Saas, Compass, Cordova.
+				Je suis plutôt spécialisé <a href="http://www.phptherightway.com">PHP</a> pour le backend, même s'il m'est arrivé d'utiliser python. Frontend classique: HTML5, CSS3, Javascript.<br />Je croise régulièrement Mysql, Saas, Compass, Phonegap, AppCache, IndexDB, Jquery, Memcache, Composer, NodeJS.
 			</p>
 			<p>
-				J'ai par le passé beaucoup travaillé en AS3 pour produire des jeux, des applications et des sites web "concept".
+				J'ai par le passé beaucoup travaillé en AS3 pour produire des jeux, des applications mono/multijoueur (coucou Flash Media Server) et des sites web.
 			</p>
 			<p>
 				Je suis actuellement Directeur technique chez <a href="http://iwd.fr">IWD</a> où j'aide l'équipe dev à produire des livrables de qualités dans les temps.
