--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				Cela fait plus de 10 ans que j'évolue dans le milieu du web, à la fois en backend et frontend.
 			</p>
 			<p>
-				Je suis plutôt spécialisé <a href="http://www.phptherightway.com">PHP</a> pour le backend, même s'il m'est arrivé d'utiliser python. Frontend classique: HTML5, CSS3, Javascript.<br />Je croise régulièrement Mysql, Saas, Compass, Phonegap, AppCache, IndexDB, Jquery, Memcache, Composer, NodeJS.
+				Je suis plutôt spécialisé <a href="http://www.phptherightway.com">PHP</a> pour le backend, même s'il m'est arrivé d'utiliser python. Frontend classique: HTML5, CSS3, Javascript.<br />Je croise régulièrement Mysql, Saas, Compass, Phonegap, AppCache, IndexDB, Jquery, Memcache, Composer, NodeJS...
 			</p>
 			<p>
 				J'ai par le passé beaucoup travaillé en AS3 pour produire des jeux, des applications mono/multijoueur (coucou Flash Media Server) et des sites web.
