--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				Je suis actuellement Directeur technique chez <a href="http://iwd.fr">IWD</a> où j'aide l'équipe dev à produire des livrables de qualités dans les temps.
 			</p>
 			<p class="links">
-				<a href="https://github.com/RETFU">Github</a> - <a href="https://twitter.com/RETFU">Twiter</a> - <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a> - <a href="http://blogmarks.net/user/RETFU">Blogmarks</a>
+				<a href="https://github.com/RETFU">Github</a> - <a href="https://twitter.com/RETFU">Twitter</a> - <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a> - <a href="http://blogmarks.net/user/RETFU">Blogmarks</a>
 			</p>
 		</div>
 		<script>
