Add funny images and some styles

--- a/talk/Standing-desk-WTF/index.html
+++ b/talk/Standing-desk-WTF/index.html
@@ -401,7 +401,8 @@ body {
 
 .slide-content {
 	font-size: 0.9em;
-	width: 80%;
+	width: 980px;
+  height:780px;
 }
 
 h1 {
@@ -433,6 +434,37 @@ ul {
 pre {
   font-size: 0.7em;
 }
+
+/*
+Slides
+ */
+#slide-3 img   {
+  display:block;
+  margin:auto;
+}
+
+#slide-6   {
+  background: url('assets/slide3.jpg');
+  background-size: cover;
+}
+
+#slide-7   {
+  background: url('assets/slide3b.jpg');
+  background-size: cover;
+}
+
+#slide-9   {
+  background: url('assets/slide4.jpg');
+  background-size: cover;
+  color: #eee;
+}
+
+#slide-12 {
+  background: url('assets/giphy.gif');
+  background-position: center center;
+  background-size: cover;
+  color: #eee;
+}
   </style>
 </head>
 <body>
@@ -456,6 +488,11 @@ pre {
   </div>
   <div class="slide hidden" id="slide-3">
     <section class="slide-content"><h3 id="mise-en-place">Mise en place</h3>
+<p><img src="assets/schema.png" alt="Schema"></p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-4">
+    <section class="slide-content"><h3 id="mise-en-place">Mise en place</h3>
 <ul>
 <li>Respecter ce schéma</li>
 <li>Adapter dans les 1er jours les hauteurs</li>
@@ -463,15 +500,24 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-4">
-    <section class="slide-content"><h3 id="cheap-mais-efficace-">Cheap mais efficace!</h3>
-</section>
-  </div>
   <div class="slide hidden" id="slide-5">
-    <section class="slide-content"><h3 id="1-re-semaine">1ère semaine</h3>
+    <section class="slide-content"><h1 id="cheap-mais-efficace-">Cheap mais efficace!</h1>
 </section>
   </div>
   <div class="slide hidden" id="slide-6">
+    <section class="slide-content"></section>
+  </div>
+  <div class="slide hidden" id="slide-7">
+    <section class="slide-content"></section>
+  </div>
+  <div class="slide hidden" id="slide-8">
+    <section class="slide-content"><h1 id="1-re-semaine">1ère semaine</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-9">
+    <section class="slide-content"></section>
+  </div>
+  <div class="slide hidden" id="slide-10">
     <section class="slide-content"><h3 id="1-re-semaine">1ère semaine</h3>
 <ul>
 <li>3 premiers jours sont fatiguants</li>
@@ -482,11 +528,14 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-7">
-    <section class="slide-content"><h3 id="3-mois-apr-s">3 mois après</h3>
+  <div class="slide hidden" id="slide-11">
+    <section class="slide-content"><h1 id="3-mois-apr-s">3 mois après</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-8">
+  <div class="slide hidden" id="slide-12">
+    <section class="slide-content"></section>
+  </div>
+  <div class="slide hidden" id="slide-13">
     <section class="slide-content"><h3 id="3-mois-apr-s">3 mois après</h3>
 <ul>
 <li><strong>Plus de mal de dos</strong>, plus de tension dans le cou</li>
@@ -496,22 +545,22 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-9">
+  <div class="slide hidden" id="slide-14">
     <section class="slide-content"><h3 id="conseils">Conseils</h3>
 <ul>
 <li>Il faut alterner ~70% debout et ~30% assis</li>
-<li>Profitez des coups de fil, lecture de mail, de tweet pour s’asseoir</li>
+<li>Profitez des coups de fil, des mails, des tweets pour s’asseoir</li>
 <li>Bougez, ça donne un rythme quand on code</li>
 <li>Ecouter son corps</li>
 <li>Investir dans un desk electrique</li>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-10">
+  <div class="slide hidden" id="slide-15">
     <section class="slide-content"><h1 id="question-">Question?</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-11">
+  <div class="slide hidden" id="slide-16">
     <section class="slide-content"><div class="author">
   <h1 class="name">Fabien Furet</h1>
     <h3 class="twitter">
