--- a/talk/REST-in-peace/index.html
+++ b/talk/REST-in-peace/index.html
@@ -487,7 +487,12 @@ pre {
 /*
 Slides
  */
-#slide-9 table {
+#slide-8 table {
+	margin-top:30px;
+	font-size: 0.6em;
+}
+
+#slide-11 table {
 	margin-top:30px;
 	font-size: 0.6em;
 }
@@ -502,7 +507,7 @@ Slides
 	font-size: 0.6em;
 }
 
-#slide-14 table {
+#slide-17 table {
 	margin-top:30px;
 	font-size: 0.6em;
 }
@@ -512,17 +517,12 @@ Slides
 	font-size: 0.6em;
 }
 
-#slide-29 table {
+#slide-27 table {
 	margin-top:30px;
 	font-size: 0.6em;
 }
 
-#slide-33 table {
-	margin-top:30px;
-	font-size: 0.6em;
-}
-
-#slide-39 table {
+#slide-38 table {
 	margin-top:30px;
 	font-size: 0.6em;
 }
@@ -550,11 +550,7 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-3">
-    <section class="slide-content"><h1 id="rtfm">RTFM</h1>
-</section>
-  </div>
-  <div class="slide hidden  " id="slide-4">
+  <div class="slide hidden  " id="slide-3">
     <section class="slide-content"><h3 id="qu-est-ce-que-rest-">Qu&#39;est-ce que REST?</h3>
 <p>URI = <a href="https://api.domain.com/v2/items/5">https://api.domain.com/v2/items/5</a> </p>
 <p>Ressource = <a href="https://api.domain.com/v2/">https://api.domain.com/v2/</a> <strong>items/5</strong></p>
@@ -568,7 +564,7 @@ Slides
 }</span></code></pre>
 </section>
   </div>
-  <div class="slide hidden  " id="slide-5">
+  <div class="slide hidden  " id="slide-4">
     <section class="slide-content"><h3 id="qu-est-ce-que-rest-">Qu&#39;est-ce que REST?</h3>
 <p>Modèle de maturité de Richardson</p>
 <ul>
@@ -576,6 +572,10 @@ Slides
 <li>Level2: verbes et code erreurs HTTP</li>
 <li>Level3: <strong>hypermédia</strong></li>
 </ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-5">
+    <section class="slide-content"><h1 id="rtfm">RTFM</h1>
 </section>
   </div>
   <div class="slide hidden" id="slide-6">
@@ -596,10 +596,6 @@ Slides
 </section>
   </div>
   <div class="slide hidden" id="slide-8">
-    <section class="slide-content"><h3 id="les-bases">Les Bases</h3>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-9">
     <section class="slide-content"><h3 id="les-bases">Les Bases</h3>
 <table>
 <thead>
@@ -633,21 +629,21 @@ Slides
 </table>
 </section>
   </div>
-  <div class="slide hidden" id="slide-10">
+  <div class="slide hidden" id="slide-9">
     <section class="slide-content"><h1 id="ressources">Ressources</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-11">
+  <div class="slide hidden" id="slide-10">
     <section class="slide-content"><h3 id="convention-formalisme">Convention / Formalisme</h3>
 <ul>
 <li>Toujours au pluriel</li>
 <li>Nommé avec des - ou des _</li>
-<li>les ids sont des UUID</li>
+<li>Les ids des représentations sont des UUID</li>
 <li>Ne reflète pas forcément votre modèle de donnée</li>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-12">
+  <div class="slide hidden" id="slide-11">
     <section class="slide-content"><h3 id="interactions">Interactions</h3>
 <table>
 <thead>
@@ -689,7 +685,7 @@ Slides
 </table>
 </section>
   </div>
-  <div class="slide hidden" id="slide-13">
+  <div class="slide hidden" id="slide-12">
     <section class="slide-content"><h3 id="relations">Relations</h3>
 <table>
 <thead>
@@ -727,7 +723,7 @@ Slides
 </table>
 </section>
   </div>
-  <div class="slide hidden" id="slide-14">
+  <div class="slide hidden" id="slide-13">
     <section class="slide-content"><h3 id="actions">Actions</h3>
 <p>On utilise toujours <strong>POST</strong>.</p>
 <table>
@@ -754,54 +750,11 @@ Slides
 </table>
 </section>
   </div>
-  <div class="slide hidden" id="slide-15">
-    <section class="slide-content"><h1 id="authentification">Authentification</h1>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-16">
-    <section class="slide-content"><h3 id="http-basic-authentification">HTTP basic authentification</h3>
-<pre><code class="lang-http"><span class="attribute">Authorization</span>: <span class="string">Basic cGhwOm1lZXR1cA==</span></code></pre>
-<ul>
-<li>username:password encodé en base64</li>
-<li>toujours utilisé avec SSL</li>
-<li>on doit maîtriser le client et le serveur</li>
-</ul>
-<blockquote>
-<p>Rapide à mettre en place, mais pas très secure, on doit avoir les credentials sur le client</p>
-</blockquote>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-17">
-    <section class="slide-content"><h3 id="basique-api-key-">Basique API Key?</h3>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-18">
-    <section class="slide-content"><h3 id="query-authentification">Query Authentification</h3>
-<pre><code class="lang-http">GET /items?param=X&amp;timestamp=1261496500&amp;apiKey=XYZ
-&amp;signature=3051d3c053e291b723f169</code></pre>
-<ul>
-<li>le client signe la requête <br/><span style="font-size:0.9em;"><code>SHA256(items?param=X&amp;timestamp=1261496500&amp;apiKey=XYZ)</code></span></li>
-<li>le serveur <ul>
-<li>valide la signature</li>
-<li>vérifie si timestamp &lt; X secondes (X étant définit sur le serveur)</li>
-</ul>
-</li>
-</ul>
-<blockquote>
-<p>Il faut que le client et le serveur soit configuré de la même façon niveau date pour avoir des timestamps comparables</p>
-</blockquote>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-19">
-    <section class="slide-content"><h3 id="oauth2">OAuth2</h3>
-<h1 id="rtfm">RTFM</h1>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-20">
+  <div class="slide hidden" id="slide-14">
     <section class="slide-content"><h1 id="requ-te">Requête</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-21">
+  <div class="slide hidden" id="slide-15">
     <section class="slide-content"><h3 id="headers">Headers</h3>
 <pre><code class="lang-bash">$ curl -X POST https://api.domain.com/v2/items \
     -H <span class="string">"Content-Type: application/json;charset=utf-8"</span> \
@@ -819,7 +772,7 @@ Slides
 }</code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-22">
+  <div class="slide hidden" id="slide-16">
     <section class="slide-content"><h3 id="body">Body</h3>
 <ul>
 <li>JSON pour POST, PUT ou PATCH</li>
@@ -833,7 +786,7 @@ Obligera côter serveur à typer les valeurs manuelement et on n&#39;aura pas de
 </blockquote>
 </section>
   </div>
-  <div class="slide hidden" id="slide-23">
+  <div class="slide hidden" id="slide-17">
     <section class="slide-content"><h3 id="erreurs">Erreurs</h3>
 <table>
 <thead>
@@ -855,11 +808,11 @@ Obligera côter serveur à typer les valeurs manuelement et on n&#39;aura pas de
 </table>
 </section>
   </div>
-  <div class="slide hidden" id="slide-24">
+  <div class="slide hidden" id="slide-18">
     <section class="slide-content"><h1 id="r-ponse">Réponse</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-25">
+  <div class="slide hidden" id="slide-19">
     <section class="slide-content"><h3 id="formats">Formats</h3>
 <ul>
 <li>JSON uniquement</li>
@@ -872,7 +825,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 </blockquote>
 </section>
   </div>
-  <div class="slide hidden" id="slide-26">
+  <div class="slide hidden" id="slide-20">
     <section class="slide-content"><h3 id="formats">Formats</h3>
 <p>Pas d&#39;enveloppe</p>
 <pre><code class="lang-json">{
@@ -893,7 +846,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 }</span></code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-27">
+  <div class="slide hidden" id="slide-21">
     <section class="slide-content"><h3 id="formats">Formats</h3>
 <p>Si on a des ressources imbriquées</p>
 <pre><code class="lang-json">{
@@ -915,7 +868,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 }</span></code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-28">
+  <div class="slide hidden" id="slide-22">
     <section class="slide-content"><h3 id="formats">Formats</h3>
 <pre><code class="lang-http"><span class="attribute">X-Resource-Nested</span>: <span class="string">true</span></code></pre>
 <pre><code class="lang-json">{
@@ -931,7 +884,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 }</span></code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-29">
+  <div class="slide hidden" id="slide-23">
     <section class="slide-content"><h3 id="code-http">Code HTTP</h3>
 <table>
 <thead>
@@ -965,10 +918,10 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 </table>
 <p>Lors d&#39;un <code>200 Ok</code> <strong>on doit retourner la ressource</strong>.</p>
 <p>Lors d&#39;un <code>201 Ok</code>: retourner la ressource et indiquer l&#39;URI de la nouvelle resource dans le header.  </p>
-<pre><code class="lang-http"><span class="attribute">Location</span>: <span class="string">https://api.domain.com/v2/items/1783`</span></code></pre>
+<pre><code class="lang-http"><span class="attribute">Location</span>: <span class="string">https://api.domain.com/v2/items/1783</span></code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-30">
+  <div class="slide hidden" id="slide-24">
     <section class="slide-content"><h3 id="format-d-erreur">Format d&#39;erreur</h3>
 <pre><code class="lang-json">{
   "<span class="attribute">code</span>": <span class="value"><span class="string">"error_code"</span></span>,
@@ -977,7 +930,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 }</span></code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-31">
+  <div class="slide hidden" id="slide-25">
     <section class="slide-content"><h3 id="exemples-de-format-d-erreur">Exemples de format d&#39;erreur</h3>
 <pre><code class="lang-http"><span class="status">HTTP/1.1 <span class="number">400</span> Bad Request</span></code></pre>
 <pre><code class="lang-json">{
@@ -994,8 +947,9 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 }</span></code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-32">
-    <section class="slide-content"><h3 id="et-pour-la-validation-">Et pour la validation?</h3>
+  <div class="slide hidden" id="slide-26">
+    <section class="slide-content"><h3 id="validation-plus-fine">Validation plus fine</h3>
+<pre><code class="lang-http"><span class="status">HTTP/1.1 <span class="number">422</span> Unprocessable Entity</span></code></pre>
 <pre><code class="lang-json">[
     {
         "<span class="attribute">code</span>": <span class="value"><span class="string">"invalid_item_name"</span></span>,
@@ -1010,7 +964,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 ]</code></pre>
 </section>
   </div>
-  <div class="slide hidden" id="slide-33">
+  <div class="slide hidden" id="slide-27">
     <section class="slide-content"><h3 id="code-http-erreurs">Code HTTP Erreurs</h3>
 <table>
 <thead>
@@ -1068,16 +1022,19 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 </table>
 </section>
   </div>
-  <div class="slide hidden" id="slide-34">
+  <div class="slide hidden" id="slide-28">
     <section class="slide-content"><h3 id="pagination-requ-te">Pagination: requête</h3>
 <pre><code class="lang-bash">$ curl -X POST https://api.domain.com/v2/item?page=2&amp;per_page=100 \
-    -H <span class="string">"Content-Type: application/json"</span></code></pre>
+    -H <span class="string">"Content-Type: application/json"</span>
+    -H <span class="string">"Accept: application/json"</span> \
+    -H <span class="string">"Accept-Encoding: gzip"</span> \
+    -H <span class="string">"X-Request-UUID: 454684315618778"</span> \</code></pre>
 <blockquote>
 <p>On pourrait utiliser le header <code>Range</code> mais par affordance et pour le côté pratique il vaut mieux utiliser la querystring.</p>
 </blockquote>
 </section>
   </div>
-  <div class="slide hidden" id="slide-35">
+  <div class="slide hidden" id="slide-29">
     <section class="slide-content"><h3 id="pagination-r-ponse">Pagination: réponse</h3>
 <ul>
 <li><code>206 Partial content</code> si on n&#39;a pas toutes les ressources, </li>
@@ -1091,29 +1048,75 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
 </blockquote>
 </section>
   </div>
-  <div class="slide hidden" id="slide-36">
+  <div class="slide hidden" id="slide-30">
     <section class="slide-content"><h3 id="pagination-r-ponse">Pagination: réponse</h3>
-<p>Ajouter un header custom pour indiquer le nombre totale de ressource disponible:</p>
+<p>Ajouter un header custom pour indiquer le nombre totale de ressources disponibles:</p>
 <pre><code class="lang-http"><span class="attribute">X-Total-Count</span>: <span class="string">456</span>
 <span class="attribute">X-Page-Max-Range</span>: <span class="string">100</span></code></pre>
 <p>Le serveur doit retourner <code>400 Bad request</code> si on dépasse les capacités de l&#39;API.</p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-37">
+  <div class="slide hidden" id="slide-31">
     <section class="slide-content"><h3 id="filtering-sort-search">Filtering, sort &amp; search</h3>
 <pre><code class="lang-bash">$ curl -X POST https://api.domain.com/v2/item?q=toto&amp;isGeek=<span class="literal">false</span>
 &amp;age=18,19&amp;sort=name,id \
-    -H <span class="string">"Content-Type: application/json"</span></code></pre>
+    -H <span class="string">"Content-Type: application/json"</span>
+    -H <span class="string">"Accept: application/json"</span> \
+    -H <span class="string">"Accept-Encoding: gzip"</span> \
+    -H <span class="string">"X-Request-UUID: 454684315618778"</span> \</code></pre>
 <blockquote>
 <p>q pour une recherche fulltext. On peut aussi se servir des filtres pour faire une recherche sur un champs particulier, exemple name=Marado*</p>
 </blockquote>
 </section>
   </div>
-  <div class="slide hidden" id="slide-38">
+  <div class="slide hidden" id="slide-32">
+    <section class="slide-content"><h1 id="authentification">Authentification</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-33">
+    <section class="slide-content"><h3 id="http-basic-authentification">HTTP basic authentification</h3>
+<pre><code class="lang-http"><span class="attribute">Authorization</span>: <span class="string">Basic cGhwOm1lZXR1cA==</span></code></pre>
+<ul>
+<li>username:password encodé en base64</li>
+<li>toujours utilisé avec SSL</li>
+<li>on doit maîtriser le client et le serveur</li>
+</ul>
+<blockquote>
+<p>Rapide à mettre en place, mais pas très secure, on doit avoir les credentials sur le client</p>
+</blockquote>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-34">
+    <section class="slide-content"><h3 id="basique-api-key-">Basique API Key?</h3>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-35">
+    <section class="slide-content"><h3 id="query-authentification">Query Authentification</h3>
+<pre><code class="lang-http">GET /items?param=X&amp;timestamp=1261496500&amp;apiKey=XYZ
+&amp;signature=3051d3c053e291b723f169</code></pre>
+<ul>
+<li>le client signe la requête <br/><span style="font-size:0.9em;"><code>SHA256(items?param=X&amp;timestamp=1261496500&amp;apiKey=XYZ)</code></span></li>
+<li>le serveur <ul>
+<li>valide la signature</li>
+<li>vérifie si timestamp &lt; X secondes (X étant définit sur le serveur)</li>
+</ul>
+</li>
+</ul>
+<blockquote>
+<p>Il faut que le client et le serveur soit configuré de la même façon niveau date pour avoir des timestamps comparables</p>
+</blockquote>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-36">
+    <section class="slide-content"><h3 id="oauth2">OAuth2</h3>
+<h1 id="rtfm">RTFM</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-37">
     <section class="slide-content"><h1 id="must-have">Must have</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-39">
+  <div class="slide hidden" id="slide-38">
     <section class="slide-content"><h3 id="rate-limiting">Rate limiting</h3>
 <ul>
 <li>Limitation des appels vers l&#39;API</li>
@@ -1145,7 +1148,7 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
 </table>
 </section>
   </div>
-  <div class="slide hidden" id="slide-40">
+  <div class="slide hidden" id="slide-39">
     <section class="slide-content"><h3 id="cors">CORS</h3>
 <ul>
 <li>Cross-Origin Resource Sharing</li>
@@ -1161,12 +1164,12 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
 </blockquote>
 </section>
   </div>
-  <div class="slide hidden" id="slide-41">
+  <div class="slide hidden" id="slide-40">
     <section class="slide-content"><h3 id="test">Test</h3>
 <p>?</p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-42">
+  <div class="slide hidden" id="slide-41">
     <section class="slide-content"><h3 id="documentation">Documentation</h3>
 <ul>
 <li>Point clé pour que l&#39;API soit populaire si publique</li>
@@ -1177,11 +1180,11 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
 <p><a href="http://apidocjs.com">http://apidocjs.com</a> </p>
 <ul>
 <li>Annotations dans le code</li>
-<li>Générer la documentation complète de votre API</li>
+<li>Génére la documentation complète de votre API</li>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-43">
+  <div class="slide hidden" id="slide-42">
     <section class="slide-content"><div class="author">
   <h1 class="name">Fabien Furet</h1>
     <h3 class="twitter">
